--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         </div>
 
     </section>
+    <!-- footer added -->
+    <section>
+        <footer>copy right Mehedi-9t9</footer>
+    </section>
 </body>
 
 </html>
